@@ -39,7 +39,7 @@ file database</li><li>Optional proxy server for load balancing, reboots and rest
         <li>On-line boards (journals) for public and private messaging</li>
         <li>Web-based forums built in for player interaction</li>
         <li>48 classes in 7 base classes, 10 player races with unique abilties, with scores of others available.</li><li>Over 2000 spells, prayers, songs, skills, and abilities, including persisting, AoE, multi-room, and other effects.</li>
-        <li>Customizable races and classes, with level based racial and
+        <li>Customizable races and classes, with level based racial, clan, and
 class skill systems</li>
         <li>Over 700 socials, with real-time addition abilities.</li>
         <li>Several builder scripting possibilities, including both
@@ -64,7 +64,7 @@ systems available, with easy to use law books</li>
 available, serving players or clans or both</li>
         <li>Full Deity support, with automated blessings to the
 faithful and curses to the wicked</li>
-        <li>Numerous Clan-types support, including&nbsp;politics, alliances,
+        <li>Numerous Clan-types support, including&nbsp;politics, alliances, buildings,
 and automated membership management</li><li>Numerous Governing types for your clan, determining voting, elections, assigning privileges, etc.</li>
         <li>Flexible Faction system with behaviors
 and reactions,&nbsp;automated relationships and triggers.</li>
@@ -73,7 +73,7 @@ granting system.</li>
 		<li>Shops raise prices when they run low, or lower them during gluts, helping keep a balanced economy.</li>
 		<li>Built-in web-socket based javascript mud client included that supports all the server protocols.</li>
 		<li>Libraries and modules can be re-compiled and re-loaded live, while the mud is online.</li>
-		<li>Optional Discord and Multi-LLM (ChatGPT, ollama, etc..) integration</li>
+		<li>Optional Discord and Multi-LLM (ChatGPT, ollama, etc..) integration.</li><li>Quest wizards and random quests for builders and admins to surprise players with.</li>
 	 </ul>
       <h2><a name="areas">Areas and Rooms</a></h2>
       <ul>
@@ -81,7 +81,7 @@ granting system.</li>
 Never wait for a reboot to publish an area!</li>
         <li>Area Instances supported</li>
         <li>Randomly generated areas based on general templates, along with random mobs, treasures, and quests.</li>
-        <li>Area based climates, seasons, night/day, and weather changes that
+        <li>Area based climates, seasons, night/day, dynamic weather changes that
 continuously affect visibility and other aspects.</li>
         <li>Numerous terrain types, including underwater areas
 requiring spells to breathe</li>
@@ -94,9 +94,9 @@ curtains, etc..</li>
         <li>Customizable system of crime and punishment available for
 each of your cities.</li>
         <li>Mud wide skies and oceans!</li>
-        <li>Homes and property real-estate system for players and clans.</li>
+        <li>Homes and property real-estate system for players and clans, including landscaping, mazes, and buildings.</li>
         <li>Customizable conquest system to allow players to conquer
-and control your areas</li><li>Area or Name based factions help mobs recall a players past reputation and react.</li><li>Travel to different planes of existence with parallel versions of your areas.</li><li>End-Game includes Instanced areas with ever-increasing difficulty and higher-power gear generated.</li><li>Sample quests include area-wide competitive and cooperative events with prizes for defeating powerful spawned enemies.</li><li>Resources gathered by players deplete from the room, forcing players to keep moving.</li><li>Fortune system gives bonuses or detriments based on the time-based and player-critera.</li>
+and control your areas</li><li>Area or Name based factions help mobs recall a players past reputation and react.</li><li>Travel to different planes of existence with parallel versions of your areas.</li><li>End-Game includes Instanced areas with ever-increasing difficulty and higher-power gear generated.</li><li>Sample quests include area-wide competitive and cooperative events with prizes for defeating powerful spawned enemies.</li><li>Resources gathered by players deplete from the room, forcing players to keep moving.</li><li>Fortune system gives bonuses or detriments based on the time-based and player-critera.</li><li>Permadeath/Hardcore systems available in configuration. &nbsp;</li><li>Extensive game and player statistics and metrics available through the web admin pages.</li>
       </ul>
       <h2><a name="player">Player and MOB features</a></h2>
       <ul>
@@ -111,8 +111,8 @@ mobs, thief mobs, mending mobs, etc, etc..</li>
         <li>Scripting capabilities to add custom MOB behaviors</li>
         <li>Players can customize their character by training their
 stats, gaining new skills, and practicing ones they know</li>
-        <li>Fighter, Mage, Cleric, Thief, Bard, and Druid base classes.
-Customizable class system available online!</li>
+        <li>Fighter, Mage, Cleric, Thief, Bard,&nbsp;Druid, and Commoner base classes.
+Multi-classing and Class customization available!</li>
         <li>Traditional and meaningful race list, including Human, Elf,
 Dwarf, Halfling, Gnome, and Half Elf. Races are customizable!</li>
         <li>Mobiles can chat with players and behave according to your
@@ -145,9 +145,9 @@ fighter skills are all extendable by players who learn expertises.</li>
         <li>Player killing is optional for the two fighting players, or
 other PK systems are settable via the INI file</li>
         <li>Saves against poison, undead, fire, cold, gas, and much
-more..</li><li>Extensive full-pipeline crafting system, which includes numerous gathering, crafting, and improving skills.</li><li>Crafting includes skills both magical, and mundane, including numerous enchanting, magical brewing, and spell-embueing.</li><li>Building skills for mutli-room constructs, digging, landscaping, multi-story homes and buildings, and shipbuiling.</li><li>Marriage system, including community property rules and shared access to resources.</li><li>Players can breed, become pregnant, have mixed-race children and generate new genes.</li><li>Merchant skills allow players to run their own shops.</li><li>Extensive
+more..</li><li>Extensive full-pipeline crafting system, which includes numerous gathering, crafting, and improving skills.</li><li>Crafting includes skills both magical, and mundane, including numerous enchanting, magical brewing, and spell-embueing.</li><li>Building skills for mutli-room constructs, digging, landscaping, mazes, multi-story homes and buildings, and shipbuiling.</li><li>Marriage system, including community property rules and shared access to resources.</li><li>Players can breed, become pregnant, have mixed-race children and generate new genes.</li><li>Merchant skills allow players to run their own shops.</li><li>Extensive
 optional roleplaying system with dynamic poses and descriptive health
-conditions, and roleplay xp base on socials, emotes. &nbsp;</li><li>Players can have pets that level with them, and some classes specialize in gathering and managing companions and pets.</li><li>Players can keep Friends and Banned lists to help keep in touch, or keep out of touch.</li><li>Groups can be placed into formations to keep the ranged players in back during combat.</li>
+conditions, and roleplay xp base on socials, emotes. &nbsp;</li><li>Players can have pets that level with them, and some classes specialize in gathering and managing companions and pets.</li><li>Players can keep Friends and Banned lists to help keep in touch, or keep out of touch.</li><li>Groups can be placed into formations to keep the ranged players in back during combat.</li><li>Re-mort for achievements and bonuses and access to new abilities.</li><li>Visual ascii-mapping skills available, for those who'd rather be playing WoW than a MUD.</li><li>Leaderboards with numerous monthly and all-time metrics. &nbsp;Exploration metrics. &nbsp;</li>
       </ul>
       <h2><a name="armor">Armor, Weapon, and Item features</a></h2>
       <ul>
@@ -160,7 +160,7 @@ much more</li>
         <li>Beds you can lie in, chairs you can sit in, etc..</li>
         <li>Weapon specializations based on class</li>
         <li>Skills and trades for players to make their own mundane
-items!</li><li>Multi-room ships that can be sailed, buildable homes and castles to defend, and caravans to drive.&nbsp;</li><li>Mounted and Seige combat, including special skills for both.</li></ul>
+items and be their own shopkeepers!</li><li>Multi-room ships that can be sailed, buildable homes and castles to defend, and caravans to drive.&nbsp;</li><li>Mounted and Seige combat, including special skills for both.</li></ul>
       <hr />
       <h2><a name="application">Application Information:</a></h2>
       <p>CoffeeMud
@@ -168,14 +168,17 @@ is written in 100% Java, listening as a server on any specified
 port(s). Built-in web servers can be activated to listen on specified
 ports.
 CoffeeMud supports any JDBC/ODBC database and has been successfully
-tested using MySQL, HSQLDB, and Derby over JDBC, and Access/SQL Server
-over ODBC. The package also includes a flat-file JDBC system for
+tested using MySQL, MariaDB, HSQLDB,&nbsp;Derby/Cloudscape, IBM DB2,
+Oracle,&nbsp;Access, and Microsoft SQL Server. The package also
+includes a flat-file JDBC system for
 beginners.</p>
       <p>The
 system includes an API that allows standard MOBs, Items, Weapons,
 Armor, Room types, Exit types, and Magic Items to be coded in less than
 a hundred lines using a template. Generic MOBS, Items, Weapons, Armor,
-and Exit types can be be molded to fit any design and spec. And all of
+and Exit types can be be molded to fit any design and spec. &nbsp;They
+can be coded in Java or JavaScript, or configured using visual editors
+for the non-coders.&nbsp; And all of
 it can be implemented online at run-time.</p>
       <p>An
 advanced message passing system lies at the systems core. Messages are
