@@ -1230,31 +1230,34 @@ Example  : list currents\n\r\
 Lists all the electronic devices receiving electronic current processing in the game. \
 This could be groups of computers in a lab, or devices aboard a single space ship.
 
+LIST_DEBUGFLAGS=LIST_DEBUGFLAG
 LIST_DEBUGFLAG=\
 Command  : LIST\n\r\
 Usage    : LIST DEBUGFLAG\n\r\
 Example  : list debugflag\n\r\
 Lists all the debug flags that have been turned on in your system.  These flags cause \
 extra messaging to appear in your mud log (mud.log), assuming DBGMSGS has been appropriately \
-set in your coffeemud.ini file.
+set in your coffeemud.ini file.  Use LIST DEBUGS to see all active debug flags.
 
-LIST_DEBUGFLAGS=\
+LIST_DEBUGS=\
 Command  : LIST\n\r\
-Usage    : LIST DEBUGFLAGS\n\r\
-Example  : list debugflags\n\r\
-Lists all the available debug flags in your mud.
+Usage    : LIST DEBUGS\n\r\
+Example  : list debugs\n\r\
+Lists all the active debug flags in your mud.  Use LIST DEBUGFLAG to see all available.
 
+LIST_DISABLEFLAGS=LIST_DISABLEFLAG
 LIST_DISABLEFLAG=\
 Command  : LIST\n\r\
 Usage    : LIST DISABLEFLAG\n\r\
 Example  : list disableflag\n\r\
-Lists all the disabled subsystems in your mud.
+Lists all the disabled subsystems in your mud.  Use LIST DISABLES to see all active disable flags.
 
-LIST_DISABLEFLAGS=\
+LIST_DISABLES=LIST_DISABLEDS
+LIST_DISABLEDS=\
 Command  : LIST\n\r\
-Usage    : LIST DISABLEFLAGS\n\r\
-Example  : list disableflags\n\r\
-Lists all the available disable flags in your mud.
+Usage    : LIST DISABLEDS\n\r\
+Example  : list disableds\n\r\
+Lists all the active disable flags in your mud.  Use LIST DISABLEFLAGS to see all available.
 
 LIST_ENABLEFLAG=\
 Command  : LIST\n\r\
