@@ -1060,13 +1060,14 @@ elapse before the property reengages and makes the mob invisible again.
 PROP_ITEMBINDER=\
 Property   : Prop_ItemBinder\n\r\
 Targets    : Items\n\r\
-Parameters : TO=CHARACTER/ACCOUNT/CLAN/PLAYER/NPC ON=PICKUP/EQUIP \n\r\
-           : MESSAGE=[ZAPMSG]\n\r\
+Parameters : TO=CHARACTER/ACCOUNT/CLAN/PLAYER/NPC/NOONE ON=PICKUP/EQUIP \n\r\
+           : (MESSAGE=[ZAPMSG]) (DEATHKEEP=TRUE/FALSE)\n\r\
 Example    : TO=CHARACTER ON=PICKUP MESSAGE="Bound -- you can't do that."\n\r\
 Description: \n\r\
 Allows an item to be bound when an event occurs to the person, account, or clan that \
 either picks it up or first equips it.  Once bound, an item can only be picked up by \
-that same player, account, or clan.  The zap message is also configureable.
+that same player, account, or clan.  The zap message is also configureable, as is \
+whether the item persists with the player over death.
 
 PROP_ITEMNORUIN=\
 Property   : Prop_ItemNoRuin\n\r\
